Atualização no csv

--- a/Covid19-Pernambuco-Database.ipynb
+++ b/Covid19-Pernambuco-Database.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "from bs4 import BeautifulSoup\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import tabula"
+    "import tabula\n",
+    "from datetime import datetime\n"
    ]
   },
   {
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -74,16 +75,25 @@
      "output_type": "stream",
      "text": [
       "20/03/2020 Informe Epidemiológico Coronavírus (COVID-19) | Nº 19 - Pernambuco\n",
+      "2020-03-20\n",
       "https://12ad4c92-89c7-4218-9e11-0ee136fa4b92.filesusr.com/ugd/3293a8_bb922dee19844ac7b24fe5649aa692a0.pdf\n"
      ]
     }
    ],
    "source": [
+    "date = \"\"\n",
+    "\n",
     "for span in h1:\n",
     "    if span.find('span') is not None:\n",
     "        if 'Informe Epidemiológico Coronavírus (COVID-19)' in span.text:\n",
     "            print(span.text)\n",
+    "            data = span.text.split(\" \") \n",
+    "            date = datetime.strptime(data[0], '%d/%m/%Y').date()\n",
+    "#             number = int(data[-2].lstrip('-').rstrip('-').strip())\n",
+    "            print(date)\n",
+    "#             print(number)\n",
     "            print(span.find('a')['href'])\n",
+    "            \n",
     "            filename = Path('covid19_pe.pdf')\n",
     "            url = span.find('a')['href']\n",
     "            response = requests.get(url)\n",
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,119 +143,31 @@
     "df = df.drop([0,1])\n",
     "df = df.iloc[ :,1:]\n",
     "\n",
-    "df = df.rename(columns={1:'MUNICÍPIO', 2:'SUSPEITO', 3:'PROVÁVEL', 4:'CONFIRMADO', 5:'DESCARTADO', 6:'TOTAL'})\n",
+    "df = df.rename(columns={1:'MUNICIPIO', 2:'SUSPEITO', 3:'PROVAVEL', 4:'CONFIRMADO', 5:'DESCARTADO', 6:'TOTAL'})\n",
     "\n",
-    "cols = ['SUSPEITO', 'PROVÁVEL', 'CONFIRMADO', 'DESCARTADO', 'TOTAL']\n",
+    "cols = ['SUSPEITO', 'PROVAVEL', 'CONFIRMADO', 'DESCARTADO', 'TOTAL']\n",
     "for col in cols:\n",
     "    df[col] = df[col].map(lambda x: str(x).lstrip('*').rstrip('*'))\n",
     "    \n",
-    "df['MUNICÍPIO'] = df['MUNICÍPIO'].map(lambda x: str(x).replace('\\n', ' '))\n",
-    "df = df.sort_values(['MUNICÍPIO'], ascending=1)\n",
-    "df = df.reset_index(drop=True)\n"
+    "df['MUNICIPIO'] = df['MUNICIPIO'].map(lambda x: str(x).replace('\\n', ' '))\n",
+    "df = df.sort_values(['MUNICIPIO'], ascending=1)\n",
+    "df = df.reset_index(drop=True)\n",
+    "df['DATETIME'] = date\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MUNICÍPIO</th>\n",
-       "      <th>SUSPEITO</th>\n",
-       "      <th>PROVÁVEL</th>\n",
-       "      <th>CONFIRMADO</th>\n",
-       "      <th>DESCARTADO</th>\n",
-       "      <th>TOTAL</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Abreu e Lima</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Barreiros</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Belo Jardim</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Bezerros</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Cabo de Santo Agostinho</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 MUNICÍPIO SUSPEITO PROVÁVEL CONFIRMADO DESCARTADO TOTAL\n",
-       "0             Abreu e Lima        6        0          0          1     7\n",
-       "1                Barreiros        1        0          0          1     2\n",
-       "2              Belo Jardim        0        0          1          0     1\n",
-       "3                 Bezerros        1        0          0          0     1\n",
-       "4  Cabo de Santo Agostinho        4        0          0          0     4"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.to_csv('covid19_pe.csv')\n",
+    "df.drop( df[df['MUNICIPIO'] == 'Subtotal'].index, axis=0, inplace=True)\n",
     "\n",
-    "df.head()"
+    "df.dropna(thresh=2, inplace=True, axis=0)\n",
+    "\n",
+    "df.head(50)\n",
+    "\n",
+    "df.to_csv('covid19_pe.csv')\n"
    ]
   },
   {
